# rust-latex-doc-minimal-example

./: Cargo.toml  crates-io.md  readme.html  readme.md
.cargo/: config.toml
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/prdoc/: all.html  fn.main.html  index.html
docs/rust_latex_doc_minimal_example/: all.html  fn.main.html  index.html  sidebar-items.js
docs/src/prdoc/: main.rs.html
docs/src/rust_latex_doc_minimal_example/: lib.rs.html  main.rs.html
src/: lib.rs  main.rs
