[package]
name = "rust-latex-doc-minimal-example"
version = "0.2.0"
authors = ["Vicente Ramirez Perea <victe@ramper.net>"]
edition = "2018"
description = "Minimal crate example for getting latex in docs."
readme = "crates-io.md"
homepage = "https://github.com/victe/rust-latex-doc-minimal-example"
repository = "https://github.com/victe/rust-latex-doc-minimal-example"

license = "CC0-1.0"
categories = ["development-tools", "mathematics", "science"]
keywords = ["latex", "rustdoc", "docs"]

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]